Fix member feature is too big in IE11

--- a/styleguide/source/assets/scss/02-molecules/_member-feature-rail.scss
+++ b/styleguide/source/assets/scss/02-molecules/_member-feature-rail.scss
@@ -1,15 +1,14 @@
 .ama__member-feature-rail {
+  display: none;
   @include child-top-gutters($gutter * 2);
   @include gutter-all($padding-all-full...);
-  display: grid;
-  grid-template-rows: auto auto;
-  grid-template-columns: 1fr;
-  grid-column-gap: $gutter;
+
   background: $gray-7;
 
   .ama__article-stub {
     @include gutter($margin-bottom-full...);
     margin-top: 0;
+    max-height: 300px;
 
     &:last-child {
       display: none;
