--- a/styleguide/source/assets/scss/03-organisms/_member-feature.scss
+++ b/styleguide/source/assets/scss/03-organisms/_member-feature.scss
@@ -6,37 +6,35 @@
     @include gutter($margin-top-full...);
 
     .ama__hero-story__media {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
-      align-items: flex-end;
+      display: block;
       margin-top: 0;
     }
 
     @include breakpoint($bp-small) {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 3fr 1fr;
       grid-column-gap: $gutter;
       background: $gray-7;
 
       .ama__hero-story {
         grid-column-start: 1;
-        grid-column-end: 4;
+        grid-column-end: 2;
       }
 
       .ama__member-feature-rail {
-        grid-column-start: 4;
+        grid-column-start: 2;
       }
     }
 
     @include breakpoint($bp-med) {
       .ama__hero-story {
         grid-column-start: 1;
-        grid-column-end: 4;
+        grid-column-end: 2;
         justify-content: flex-start;
       }
       .ama__hero-story__media {
         margin-right: $gutter*-1;
+        max-height: 450px;
 
         img {
           height: 100%;
@@ -45,7 +43,7 @@
       }
 
       .ama__member-feature-rail {
-        grid-column-start: 4;
+        grid-column-start: 2;
       }
     }
   }
